--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -3,9 +3,14 @@
   line-height: 1.5;
   font-weight: 400;
 
+  --brand-blue: #007EC6;
+  --brand-gray: #556987;
+  --brand-light-gray: #8896AB;
+  --brand-bg_gray: #F6F7F8;
+
   color-scheme: light dark;
-  color: #213547;
-  background-color: #f6f7f8;
+  color: black;
+  background-color: var(--brand-bg_gray);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,6 +30,7 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -55,12 +61,12 @@ p {
 
 button {
   border-radius: 6px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 16px 28px;
   font-family: sans-serif;
   font-size: 18px;
   font-weight: 500;
-  background-color: #007EC6;
+  background-color: var(--brand-blue);
   color: white;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -79,35 +85,35 @@ button:focus-visible {
 
 
 #app {
-  max-width: 1138px;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  overflow-x: hidden;
 }
 
-@media (max-width: 767px) {
-  #app {
-    padding: 1rem;
-  }
-}
+/*@media (max-width: 767px) {*/
+/*  #app {*/
+/*    padding: 1rem;*/
+/*  }*/
+/*}*/
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  #app {
-    padding: 1.5rem;
-  }
-}
+/*@media (min-width: 768px) and (max-width: 1024px) {*/
+/*  #app {*/
+/*    padding: 1.5rem;*/
+/*  }*/
+/*}*/
 
-@media (min-width: 1025px) and (max-width: 1280px) {
-  #app {
-    padding: 2rem;
-  }
-}
+/*@media (min-width: 1025px) and (max-width: 1280px) {*/
+/*  #app {*/
+/*    padding: 2rem;*/
+/*  }*/
+/*}*/
 
-@media (min-width: 1281px) {
-  #app {
-    padding: 3rem;
-  }
-}
+/*@media (min-width: 1281px) {*/
+/*  #app {*/
+/*    padding: 3rem;*/
+/*  }*/
+/*}*/
 
 
 
