--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,15 +1,17 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   --brand-blue: #007EC6;
   --brand-gray: #556987;
   --brand-light-gray: #8896AB;
+  --brand-dark-gray: #333f51;
   --brand-bg_gray: #F6F7F8;
+  --brand-black: #222222;
 
   color-scheme: light dark;
-  color: black;
+  color: var(--brand-black);
   background-color: var(--brand-bg_gray);
 
   font-synthesis: none;
@@ -20,12 +22,21 @@
 }
 
 a {
+  font-size: 12px;
+  line-height: 18px;
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: var(--brand-blue);
+  cursor: pointer;
 }
 a:hover {
   color: #747bff;
+}
+
+label {
+  color: var(--brand-dark-gray);
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 body {
@@ -49,6 +60,11 @@ h2 {
 }
 
 h3 {
+  font-size: 32px;
+  line-height: 42px;
+}
+
+h4 {
   font-size: 1.5em;
   line-height: 1.3;
 }
@@ -63,7 +79,6 @@ button {
   border-radius: 6px;
   border: 2px solid transparent;
   padding: 16px 28px;
-  font-family: sans-serif;
   font-size: 18px;
   font-weight: 500;
   background-color: var(--brand-blue);
@@ -90,43 +105,3 @@ button:focus-visible {
   margin: 0 auto;
   overflow-x: hidden;
 }
-
-/*@media (max-width: 767px) {*/
-/*  #app {*/
-/*    padding: 1rem;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 768px) and (max-width: 1024px) {*/
-/*  #app {*/
-/*    padding: 1.5rem;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 1025px) and (max-width: 1280px) {*/
-/*  #app {*/
-/*    padding: 2rem;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 1281px) {*/
-/*  #app {*/
-/*    padding: 3rem;*/
-/*  }*/
-/*}*/
-
-
-
-/*@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  /*button {
-    background-color: #f9f9f9;
-  }
-}
-*/
