--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -94,10 +94,77 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
+.form-container {
+  max-width: 543px;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
 }
 
+.form-container label{
+  margin: 16px 0 0 0;
+  text-align: left;
+}
+
+.form-container p {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  color: var(--brand-gray);
+}
+
+.form-logo {
+  width: 64px;
+  height: 64px;
+  margin: 0 auto;
+}
+
+.form-main-block {
+  display: flex;
+  flex-direction: column;
+  border-radius: 16px;
+  background-color: white;
+  box-shadow: 0 2px 10px 0 #d9d9d9;
+}
+
+.form-main-block-inner {
+  margin: 42px 92px 64px 92px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-main-block-inner h3{
+  margin: 16px 0;
+}
+
+.form-main-block-inner button {
+  margin: 14px 0 0 0;
+}
+
+.form-input-container {
+  margin: 12px 0 0 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-warning-message {
+  margin: 16px 0 0 0;
+  color: #ea0000;
+}
+
+.form-input-container input {
+  margin: 5px 0 0 0;
+  height: 46px;
+  border-radius: 8px;
+  border: 1px solid #d5dae1;
+}
+
+@media (max-width: 600px) {
+  .form-main-block-inner {
+    margin: 42px 42px 64px 42px;
+  }
+}
 
 #app {
   display: flex;
