Поправил стили NavBarUserMenu, NavBAr. Разделил хранилище vuex для юзера и панели управления. При входе в систему загружаются данные для панели управления.  Сделал страницу добавления биржи. Вырезал vuetify.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,6 +11,7 @@
   --brand-black: #222222;
   --brand-info: #44bcff;
   --brand-border-gray: #d5dae1;
+  --brand-error: #ff0000;
 
   color-scheme: light dark;
   color: var(--brand-black);
