--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -163,6 +163,84 @@ button:focus-visible {
   border: 1px solid #d5dae1;
 }
 
+/* Информационная иконка начало */
+.info-wrapper {
+  position: relative;
+}
+
+.info-wrapper:hover .tooltip {
+  opacity: 1;  /* конечное состояние - полностью видимо */
+  visibility: visible;
+}
+
+.tooltip {
+  opacity: 0;  /* начальное состояние - прозрачно */
+  visibility: hidden;  /* начальное состояние - невидимо */
+  transition: opacity 0.3s ease, visibility 0.3s ease;  /* добавьте анимацию */
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ffffff;
+  box-shadow: 0 2px 10px 0 #d9d9d9;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 1;
+  white-space: nowrap;
+}
+/* Информационная иконка конец */
+
+/* Начало back-title */
+.back-title-top-block {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 0 12px 0;
+}
+
+.back-title-top-block::after {
+  content: "";
+  display: block;
+  width:76px;
+}
+
+.back-title-top-block h3 {
+  flex-grow: 1;
+  text-align: center;
+}
+
+.back-title-back{
+  display: flex;
+  align-items: center;
+  width:76px;
+  text-decoration: none;
+  color: var(--brand-blue);
+}
+
+.back-title-back .mdi-chevron-left,
+.back-title-span-back {
+  transition: color 0.2s;
+}
+
+.back-title-back:hover .mdi-chevron-left,
+.back-title-back:hover .back-title-span-back {
+  color: var(--brand-info);
+}
+
+.back-title-back .mdi-chevron-left {
+  font-size: 28px;
+}
+
+.back-title-span-back {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 130%
+}
+/* Конец back-title */
+
 @media (max-width: 600px) {
   .form-main-block-inner {
     margin: 42px 42px 64px 42px;
