--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -128,7 +128,7 @@ button:focus-visible {
   flex-direction: column;
   border-radius: 16px;
   background-color: white;
-  box-shadow: 0 2px 10px 0 #d9d9d9;
+  box-shadow: 0 2px 10px 0 var(--brand-border-gray);
 }
 
 .form-main-block-inner {
@@ -182,7 +182,7 @@ button:focus-visible {
   left: 50%;
   transform: translateX(-50%);
   background-color: #ffffff;
-  box-shadow: 0 2px 10px 0 #d9d9d9;
+  box-shadow: 0 2px 10px 0 var(--brand-border-gray);
   color: black;
   padding: 5px 10px;
   border-radius: 5px;
@@ -193,6 +193,8 @@ button:focus-visible {
 
 /* Начало back-title */
 .back-title-top-block {
+  width: 80vw;
+  max-width: 1138px;
   display: flex;
   flex-direction: row;
   align-items: center;
